--- a/app/src/main/res/layout/layout_book.xml
+++ b/app/src/main/res/layout/layout_book.xml
@@ -76,7 +76,7 @@
         android:id="@+id/text_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="5.0"
+        android:text="5/5"
         android:textSize="15sp"
         android:drawableLeft="@drawable/ic_star"
         android:layout_marginTop="10dp"
