--- a/app/src/main/res/layout/layout_error_item.xml
+++ b/app/src/main/res/layout/layout_error_item.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Error! Pull to refresh..."
+        android:text="No network connection..."
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
