--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -5,7 +5,7 @@
     android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.BookFragment">
+    tools:context=".ui.book.BookFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycle_view_book"
