--- a/app/src/main/res/layout/fragment_book_info.xml
+++ b/app/src/main/res/layout/fragment_book_info.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.bookdetail.BookDetailFragment">
+    tools:context=".ui.bookInfo.BookInfoFragment">
 
     <ScrollView
         android:layout_width="0dp"
