--- a/app/src/main/res/layout/layout_error_item.xml
+++ b/app/src/main/res/layout/layout_error_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="100dp">
 
     <TextView
+        android:id="@+id/text_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="No network connection..."
